-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
Numeric based NIDs can have address "0". This causes problems for nid_addr_is_set() which can only look for a non-zero address value.
This causes two bugs:
- If a node has multiple NIDs on one net, one of the NIDs has a 0
address, then an attempt to delete the 0 address NID will cause
all NIDs on the network to be removed. - If the source NID specified for lnetctl ping has a 0 address then
this is not correctly passed down to the kernel (so the ping is
processed as though no souce NID were specified).